--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=production node server/server.js",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color \" \"nodemon ./server/server.js\"",
-    "build": "NODE_ENV=production webpack .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "frontend": "NODE_ENV=development webpack-dev-server --open"
+    "build": "NODE_ENV=production Webpack .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -44,14 +43,11 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "react-redux": "^8.0.5",
     "react-router": "^4.3.1"
   }
 }
